# indexer

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.org  Rocket.toml  TODOs.org  docker-compose.yml
.github/workflows/: rust.yaml
corpus/: convert_text.sh  process-gutenberg.el
input/: stopwords.txt
migrations/2022-10-17-112900_create_documents/: down.sql  up.sql
migrations/2022-10-17-112904_create_keywords/: up.sql
src/: appwrite.rs  kwparser.rs  lib.rs  main.rs  parser.rs  server.rs  spelling.rs
src/db/: mod.rs  models.rs  schema.rs
src/fileparser/: html.rs  mod.rs  pdf.rs
src/server/: appwrite.rs  mod.rs  s3.rs
texts/: atome.txt  nuage_electronique.txt
