[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
csv = "1.1"

# Database
diesel = { version = "2.0.0", features = ["postgres", "extras"] }
dotenvy = "0.15"

# Web server
rocket = { version = "0.5.0-rc.2", features = ["json"] }
# rocket_cors = "0.6.0-alpha1"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

# HTML request and parsing
reqwest = "0.11.12"
html2text = "0.4.3"
scraper = "0.13.0"

# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# parallelism
rayon = "1.5.3"