[package]
name = "indexer"
version = "0.3.0"
edition = "2021"
authors = ["Lucien Cartier-Tilet <lucien@phundrak.com>"]
default-run = "indexer"
homepage = "https://github.com/Phundrak/indexer"
license = "GPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
csv = "1.1"
sha256 = "1.1.1"

# Database
diesel = { version = "2.0.2", features = ["postgres", "extras"] }
diesel_migrations = "2.0.0"
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenvy = "0.15"

# Web server
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

# File type inference
infer = "0.11.0"

# Documents parsing
pandoc = "0.8.10"
poppler-rs = "0.20.0"

# HTML request and parsing
url = { version = "2", features = ["serde"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
html2text = "0.4.3"
scraper = "0.13.0"
rust-s3 = "0.32.3"

# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# parallelism
rayon = "1.5.3"

# better error output
color-eyre = "0.6.2"

# Encode and decode bincode
bincode = "1.3.3"